# flexeval

./: .dir-locals.el  .gitignore  .pre-commit-config.yaml  FAQ.md  IMPROVEMENT.md  INSTANCE.md  LEGAL.md  README  README.md  TODO  TODO.md  completed.tpl  config.py  generate-multi-MUSHRA-test.sh  generate-test1_disfluence.sh  generate-video_LSF.sh  generator.py  generator2.py  index.py  index.tpl  main.db  model.py  p&m_bodies.py  pip-install-dependencies.sh  plateform.py  pm_bodies.py  pyproject.toml  python.lnk  requirements.txt  run.py  run_gunicorn.py  script.py  sys0.csv  sys1.csv  sys2.csv  sys3.csv  sys4.csv  template.tpl  template2.tpl  test-AB.sh  (+5 more)
assets/: __init__.py
configs/test/: config.json  questionnaireA.tpl
core/: utils.py
core/admin/: __init__.py
core/src/: Admin.py  Assets.py  Export.py  Module.py
core/templates/: base.tpl  error.tpl  export_auth.tpl  export_panel.tpl
databases/: 1.db  1.db-journal  STATIC.db  static_db.db
examples/test_dev/: RGPD.json  app.wgsi  legal.json  legal.yaml  structure.json  structure.yaml  tests.json  tests.yaml
flexeval/: __init__.py  database.py  extensions.py  utils.py
flexeval/core/: Admin.py  Config.py  ErrorHandler.py  Module.py  ProviderFactory.py  Stage.py  __init__.py  admin.py  config.py  core.py  error.py  module.py  stage.py
input/: AB.json  AB.tpl  MOS.json  MOS.tpl  MUSHRA-MULTI.json  MUSHRA-MULTI.tpl  MUSHRA.json  MUSHRA.tpl  TEST1_DISFLUENCE.json  TEST1_DISFLUENCE.tpl  TEST_VIDEO_LSF.json  TEST_VIDEO_LSF.tpl  completed.tpl  completed_LSF.tpl  export.tpl  index.tpl  index_LSF.tpl  sys0.csv  sys1.csv  sys2.csv  sys3.csv  sys4.csv  template.tpl  test.json
old/: generate-MUSHRA-test.sh  generate-video_LSF.sh  generator.py  manuel de l'utilisateur.docx  platform.py  requirements.txt
perceval/: __init__.py  database.py  extensions.py  utils.py
src/: Assets.py  Export.py
static/: __init__.py
svg/: template.tpl  template1.tpl  template1loop.tpl  template1noloop.tpl  template2mono.tpl
templates/: base.tpl
views/: 1.tpl  footer.tpl  header.tpl  home.tpl  login_form.tpl  main.tpl  readme.txt  test_content.tpl
(+370 files in other folders)
